--- a/JsonParsing/JsonParsing.csproj
+++ b/JsonParsing/JsonParsing.csproj
@@ -54,7 +54,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\..\gau-encounterdetection\gau-encounterdetection\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\..\dga-encounterdetection\Encounterdetection\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -66,6 +66,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Generators\AOE2HDGameStateGenerator.cs" />
     <Compile Include="Generators\CSGOGameStateGenerator.cs" />
     <Compile Include="Generators\GameStateGenerator.cs" />
     <Compile Include="Generators\IGameStateGenerator.cs" />
@@ -73,7 +74,7 @@
     <Compile Include="Parsers\IJSONParsing.cs" />
     <Compile Include="Parsers\JSONParser.cs" />
     <Compile Include="Parsers\CSGOJSONParser.cs" />
-    <Compile Include="Parsers\JSONParseTask.cs" />
+    <Compile Include="Parsers\ParseTask.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -82,15 +83,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\demoinfo\DemoInfo\DemoInfo.csproj">
-      <Project>{22d4cfc7-6810-4c18-a353-71a49782394f}</Project>
-      <Name>DemoInfo</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\gau-encounterdetection\gau-encounterdetection\EncounterDetection\EncounterDetection.csproj">
+    <ProjectReference Include="..\..\..\dga-core\Core\EncounterDetection\EncounterDetection.csproj">
       <Project>{a36a9504-dd34-4c5c-a1e5-bff7528344f0}</Project>
       <Name>EncounterDetection</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\mathnet-spatial\src\Spatial\SpatialMath.csproj">
+    <ProjectReference Include="..\..\..\dga-mathnet\src\Spatial\SpatialMath.csproj">
       <Project>{1f3364c6-9da3-4006-b83f-6d1335099895}</Project>
       <Name>SpatialMath</Name>
     </ProjectReference>
